--- a/package.json
+++ b/package.json
@@ -50,10 +50,10 @@
     "husky:post-commit": "php bin/post-commit.php",
     "husky:pre-commit": "php bin/pre-commit.php",
     "husky:unset-hooks": "git config --unset core.hooksPath",
-    "lint": "npm run lint-no-fix --fix",
-    "lint-fast": "npm run lint --config .eslintrc.fast.js",
+    "lint": "eslint --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}",
+    "lint-fast": "eslint --config .eslintrc.fast.js --fix --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}",
     "lint-no-fix": "eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}",
-    "lint-no-fix-profile": "set TIMING=1 & npm run lint-no-fix",
+    "lint-no-fix-profile": "set TIMING=1 & eslint --max-warnings 0 --no-error-on-unmatched-pattern *.{js,ts} {__mocks__,configs,api,bin,fixtures,src,tests}/**/*.{js,ts,vue}",
     "npm:install": "npm install --no-audit --strict-peer-deps",
     "npm:install-clean": "npm install-clean --no-audit --strict-peer-deps",
     "npm:publish": "publish-if-not-exists",
